--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://DreamscapeOff.github.io/dreamxscape",
+  "homepage": ".",
   "name": "dreamxscape",
   "private": true,
   "version": "0.0.0",
