--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": ".",
+  "homepage": "https://dreamscapeoff.github.io/dreamxscape/",
   "name": "dreamxscape",
   "private": true,
   "version": "0.0.0",
