--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "target": "esnext",
+  "module": "commonjs",
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
