--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://dreamscapeoff.github.io/dream-web/",
+  "homepage": "https://dreamscapeoff.github.io/dream-web",
   "name": "dreamxscape",
   "private": true,
   "version": "0.0.0",
